--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -113,18 +113,18 @@
                 </div>
               </div>
 
-              <!-- SECTION: Question group -->
-              <div uib-accordion-group is-open="questionGroupSection.open" class="panel-container summary-box animated" ng-class="{fadeInUp: questionGroupSection.show}" ng-if="questionGroupSection.show" is-disabled="!newQuestion.questiongroup_serNum">
+              <!-- SECTION: Question Library -->
+              <div uib-accordion-group is-open="questionLibrarySection.open" class="panel-container summary-box animated" ng-class="{fadeInUp: questionLibrarySection.show}" ng-if="questionLibrarySection.show" is-disabled="!newQuestion.questiongroup_serNum">
                 <uib-accordion-heading>
                   <div class="row" style="align-items: center">
                     <div class="col-md-2">
                       <span ng-if="newQuestion.questiongroup_serNum" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                     </div>
                     <div class="col-md-8">
-                      <strong>Question Group</strong>
+                      <strong>Question Library</strong>
                     </div>
                     <div class="col-md-2">
-                      <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': questionGroupSection.open, 'glyphicon-chevron-right': !questionGroupSection.open}" ng-if="newQuestion.questiongroup_serNum"></i>
+                      <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': questionLibrarySection.open, 'glyphicon-chevron-right': !questionLibrarySection.open}" ng-if="newQuestion.questiongroup_serNum"></i>
                     </div>
                   </div>
                 </uib-accordion-heading>
@@ -401,122 +401,75 @@
             </div>
           </div>
 
-          <!-- SECTION: Question grouping -->
-          <div class="row animated" ng-class="{fadeInUp: questionGroupSection.show}" ng-if="questionGroupSection.show" style="margin-top: 10px;">
+          <!-- SECTION: Question library -->
+          <div class="row animated" ng-class="{fadeInUp: questionLibrarySection.show}" ng-if="questionLibrarySection.show" style="margin-top: 10px;">
             <div class="col-xs-12 side-menu-title">
               <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
-                        <h2>Question grouping</h2>
+                        <h2>Question Library</h2>
                       </span>
               </div>
             </div>
           </div>
-          <div class="row animated" ng-class="{fadeInUp: questionGroupSection.show}" ng-if="questionGroupSection.show">
-            <div class="col-xs-12">
-              <p style="margin-bottom: 10px;">
+          <div class="row animated" ng-class="{fadeInUp: questionLibrarySection.show}" ng-if="questionLibrarySection.show">
+
+            <div class="col-xs-12" ng-init="content=1">
+              <p><label for="first"><input id="first" type="radio" name="content" ng-model="content" value="1">No library needed.</label></p>
+            </div>
+            <div class="col-xs-12" style="margin-bottom: 10px;">
+              <p><label for="other"><input id="other" type="radio" name="content" ng-model="content" value="2">Add the question to a library.</label></p>
+            </div>
+            <div class="col-xs-12" ng-show="content == 2">
+              <div class="col-xs-12" style="margin-bottom: 10px;">
                 <span style="color:#d9534f"><strong>Required field:</strong></span>
-                Please choose a question group where to add this question.
-              </p>
-            </div>
-          </div>
-          <div class="row animated" ng-class="{fadeInUp: questionGroupSection.show}" ng-if="questionGroupSection.show">
-            <div class="col-xs-12 col-md-8">
-              <div class="panel" ng-class="newQuestion.questiongroup_serNum ? 'panel-success': 'panel-danger'">
-                <div class="panel-heading"><strong>Question Group</strong>
-                  <span ng-hide="newQuestion.questiongroup_serNum" style="float:right"><em>Incomplete</em></span>
-                  <span ng-show="newQuestion.questiongroup_serNum" style="float:right"><em>Complete</em></span>
-                </div>
-                <div class="panel-body">
+                Please choose a question library where to add this question.
+              </div>
+              <div class="col-xs-12 col-md-8">
+                <div class="panel" ng-class="newQuestion.questiongroup_serNum ? 'panel-success': 'panel-danger'">
+                  <div class="panel-heading"><strong>Question Libray</strong>
+                    <span ng-hide="newQuestion.questiongroup_serNum" style="float:right"><em>Incomplete</em></span>
+                    <span ng-show="newQuestion.questiongroup_serNum" style="float:right"><em>Complete</em></span>
+                  </div>
+                  <div class="panel-body">
 
-                  <div class="list-space">
-                    <div class="input-group">
-                      <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-                      <input class="form-control" type="text" ng-model="groupEntered" ng-change="searchGroup(groupEntered)" placeholder="Search Question Group"/>
+                    <div class="list-space">
+                      <div class="input-group">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                        <input class="form-control" type="text" ng-model="libEntered" ng-change="searchLib(libEntered)" placeholder="Search Question Library"/>
+                      </div>
+                      <ul class="list-items">
+                        <li ng-repeat="group in groupFilterList| filter: searchLibFilter">
+                          <label>
+                            <input type="radio" name="{{group.name_EN}}" value="{{group.serNum}}" ng-model="newQuestion.questiongroup_serNum" ng-change="updateGroup(group)" /> {{group.name_EN}}
+                          </label>
+                        </li>
+                      </ul>
                     </div>
-                    <ul class="list-items">
-                      <li ng-repeat="group in groupFilterList| filter: searchGroupFilter">
-                        <label>
-                          <input type="radio" name="{{group.name_EN}}" value="{{group.serNum}}" ng-model="newQuestion.questiongroup_serNum" ng-change="updateGroup(group)" /> {{group.name_EN}}
-                        </label>
-                      </li>
-                    </ul>
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
 
-          <!-- Add new Library/Category/Group -->
-          <div class="row animated" ng-class="{fadeInUp: questionGroupSection.show}" ng-if="questionGroupSection.show">
-            <div class="col-xs-12">
-              <p style="margin-bottom: 10px; margin-top: 10px;">
-                <span style="font-size: 20px;" class="fa fa-question-circle"></span>
-                <span style="font-size: 15px">Can't find question group? Create a new one here:</span>
-                <br><span style="font-size: 15px;" class="fa fa-asterisk"></span>
-                Please note that question groups <-> categories < libraries, you must specify the corresponding categories and libraries.
-              </p>
-            </div>
+              <!-- Add new Library/Category/Group -->
+              <div class="row animated" ng-class="{fadeInUp: questionLibrarySection.show}" ng-if="questionLibrarySection.show">
+                <div class="col-xs-12">
+                  <p style="margin-bottom: 10px; margin-top: 10px;">
+                    <span style="font-size: 20px;" class="fa fa-question-circle"></span>
+                    <span style="font-size: 15px">Can't find a question library? Create a new one here:</span>
+                  </p>
+                </div>
 
-            <div class="col-md-7">
-              <div class="panel-container">
-                <form name="newGroupForm">
-                  <div class="col-md-6">
-                    <select class="form-control" name="library" ng-model="librarySelected" ng-options="lib.name_EN for lib in libFilterList track by lib.serNum" required>
-                      <option value="">-- select a library --</option>
-                    </select>
-                  </div>
 
-                  <div class="col-md-5">
-                    <p style="margin-bottom: 10px; margin-top: 10px; font-size: 15px;">
-                      <span style="font-size: 15px;" class="fa fa-angle-double-right"></span>
-                      - or create a new library -
-                      <span style="font-size: 15px;" class="fa fa-angle-double-right"></span>
-                    </p>
-                  </div>
-
-                  <div class="col-md-6">
-                    <select class="form-control" name="category" ng-disabled="!librarySelected" ng-model="categorySelected" ng-options="cat.category_EN for cat in librarySelected.categories" required>
-                      <option value="">-- select a category --</option>
-                    </select>
-                  </div>
-
-                  <div class="col-md-5">
-                    <p style="margin-bottom: 10px; margin-top: 10px; font-size: 15px;">
-                      <span style="font-size: 15px;" class="fa fa-angle-double-right"></span>
-                      - or enter a new category -
-                      <span style="font-size: 15px;" class="fa fa-angle-double-right"></span>
-                    </p>
-                  </div>
-
-                  <div class="col-md-12">
+                <div class="col-md-4">
+                  <form name="newLibForm">
                     <div class="input-group">
-                      <input class="form-control" style="width:50%" type="text" ng-model="newGroup.name_EN" placeholder="New Question Group (EN)" ng-disabled="!librarySelected && !categorySelected && !(newGroup.category_EN && newGroup.category_FR)" required/>
-                      <input class="form-control" style="width:50%" type="text" ng-model="newGroup.name_FR" placeholder="New Question Group (FR)" ng-disabled="!librarySelected && !categorySelected && !(newGroup.category_FR && newGroup.category_EN)" required/>
-                      <span class="input-group-btn"><button class="btn btn-default" type="submit" ng-click="addNewGroup(librarySelected.serNum, categorySelected)" ng-disabled="newGroupForm.$invalid">Add</button></span>
+                      <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_EN" placeholder="New Library (EN)" ng-disabled="librarySelected" required/>
+                      <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_FR" placeholder="New Library (FR)" ng-disabled="librarySelected" required/>
+                      <span class="input-group-btn"><button class="btn btn-default" type="submit" ng-click="addNewLib()" ng-disabled="newLibForm.$invalid">Add</button></span>
                     </div>
-                  </div>
-                </form>
+                  </form>
+                </div>
               </div>
-            </div>
-            <div class="col-md-4">
-              <form name="newLibForm">
-                <div class="input-group">
-                  <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_EN" placeholder="New Library (EN)" ng-disabled="librarySelected" required/>
-                  <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_FR" placeholder="New Library (FR)" ng-disabled="librarySelected" required/>
-                  <span class="input-group-btn"><button class="btn btn-default" type="submit" ng-click="addNewLib()" ng-disabled="newLibForm.$invalid">Add</button></span>
-                </div>
-              </form>
-            </div>
-
-            <div class="col-md-4">
-              <form name="newCatForm">
-                <div class="input-group">
-                  <input class="form-control" style="width:50%" type="text" ng-model="newCat.category_EN" placeholder="New Category (EN)" ng-disabled="categorySelected || !librarySelected" required/>
-                  <input class="form-control" style="width:50%" type="text" ng-model="newCat.category_FR" placeholder="New Category (FR)" ng-disabled="categorySelected || !librarySelected" required/>
-                  <span class="input-group-btn"><button class="btn btn-default" type="submit" ng-click="addNewCat(librarySelected.categories)" ng-disabled="newCatForm.$invalid">Add</button></span>
-                </div>
-              </form>
             </div>
           </div>
         </div>
