--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -80,21 +80,21 @@
               </div>
 
               <!-- SECTION: Answer type -->
-              <div uib-accordion-group is-open="answerTypeSection.open" class="panel-container summary-box animated" ng-class="{fadeInUp: answerTypeSection.show}" ng-if="answerTypeSection.show" is-disabled="!newQuestion.answertype_serNum">
+              <div uib-accordion-group is-open="answerTypeSection.open" class="panel-container summary-box animated" ng-class="{fadeInUp: answerTypeSection.show}" ng-if="answerTypeSection.show" is-disabled="!newQuestion.questiontype_ID">
                 <uib-accordion-heading>
                   <div class="row" style="align-items: center">
                     <div class="col-md-2">
-                      <span ng-if="newQuestion.answertype_serNum" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
+                      <span ng-if="newQuestion.questiontype_ID" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                     </div>
                     <div class="col-md-8">
                       <strong>Response Type</strong>
                     </div>
                     <div class="col-md-2">
-                      <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': answerTypeSection.open, 'glyphicon-chevron-right': !answerTypeSection.open}" ng-if="newQuestion.answertype_serNum"></i>
+                      <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': answerTypeSection.open, 'glyphicon-chevron-right': !answerTypeSection.open}" ng-if="newQuestion.questiontype_ID"></i>
                     </div>
                   </div>
                 </uib-accordion-heading>
-                <div ng-if="newQuestion.answertype_serNum" class="description">
+                <div ng-if="newQuestion.questiontype_ID" class="description">
                   <p style="margin-bottom:5px;">
                     {{selectedAt.category_EN}}
                   </p>
@@ -104,7 +104,7 @@
                     {{selectedAt.name_EN}}
                   </p>
                 </div>
-                <div ng-if="newQuestion.answertype_serNum" class="description">
+                <div ng-if="newQuestion.questiontype_ID" class="description">
                   <p style="margin-bottom:5px;">
                     <strong>FR</strong>
                     <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
@@ -114,28 +114,28 @@
               </div>
 
               <!-- SECTION: Question Library -->
-              <div uib-accordion-group is-open="questionLibrarySection.open" class="panel-container summary-box animated" ng-class="{fadeInUp: questionLibrarySection.show}" ng-if="questionLibrarySection.show" is-disabled="!newQuestion.questiongroup_serNum">
+              <div uib-accordion-group is-open="questionLibrarySection.open" class="panel-container summary-box animated" ng-class="{fadeInUp: questionLibrarySection.show}" ng-if="questionLibrarySection.show" is-disabled="!newQuestion.library_ID">
                 <uib-accordion-heading>
                   <div class="row" style="align-items: center">
                     <div class="col-md-2">
-                      <span ng-if="newQuestion.questiongroup_serNum" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
+                      <span ng-if="newQuestion.library_ID" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                     </div>
                     <div class="col-md-8">
                       <strong>Question Library</strong>
                     </div>
                     <div class="col-md-2">
-                      <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': questionLibrarySection.open, 'glyphicon-chevron-right': !questionLibrarySection.open}" ng-if="newQuestion.questiongroup_serNum"></i>
+                      <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': questionLibrarySection.open, 'glyphicon-chevron-right': !questionLibrarySection.open}" ng-if="newQuestion.library_ID"></i>
                     </div>
                   </div>
                 </uib-accordion-heading>
-                <div ng-show="newQuestion.questiongroup_serNum" class="description">
+                <div ng-if="newQuestion.library_ID" class="description">
                   <p style="margin-bottom:5px;">
                     <strong>EN</strong>
                     <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                     {{selectedGroup.name_EN}}
                   </p>
                 </div>
-                <div ng-show="newQuestion.questiongroup_serNum" class="description">
+                <div ng-if="newQuestion.library_ID" class="description">
                   <p style="margin-bottom:5px;">
                     <strong>FR</strong>
                     <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
@@ -272,10 +272,10 @@
                 </p>
                 <div class="row animated" ng-class="{fadeInUp: answerTypeSection.show}" ng-if="answerTypeSection.show">
                   <div class="col-xs-12">
-                    <div class="panel" ng-class="newQuestion.answertype_serNum ? 'panel-success': 'panel-danger'">
+                    <div class="panel" ng-class="newQuestion.questiontype_ID ? 'panel-success': 'panel-danger'">
                       <div class="panel-heading"><strong>Response Type</strong>
-                        <span ng-hide="newQuestion.answertype_serNum" style="float:right"><em>Incomplete</em></span>
-                        <span ng-show="newQuestion.answertype_serNum" style="float:right"><em>Complete</em></span>
+                        <span ng-hide="newQuestion.questiontype_ID" style="float:right"><em>Incomplete</em></span>
+                        <span ng-show="newQuestion.questiontype_ID" style="float:right"><em>Complete</em></span>
                       </div>
                       <div class="panel-body">
                         <div class="input-group">
@@ -285,7 +285,7 @@
                         <ul class="list-items">
                           <li ng-repeat="at in atFilterList | filter: searchAtFilter">
                             <label>
-                              <input type="radio" name="{{at.name_EN}}" value="{{at.serNum}}" ng-model="newQuestion.answertype_serNum" ng-change="updateAt(at)"/> {{at.name_EN}} ({{at.category_EN}})
+                              <input type="radio" name="{{at.name_EN}}" value="{{at.serNum}}" ng-model="newQuestion.questiontype_ID" ng-change="updateAt(at)"/> {{at.name_EN}} ({{at.category_EN}})
                             </label>
                           </li>
                         </ul>
@@ -300,7 +300,7 @@
                 </p>
 
                 <!-- Preview -->
-                <div class="col-xs-12" ng-show="newQuestion.text_EN && newQuestion.text_FR && newQuestion.answertype_serNum">
+                <div class="col-xs-12" ng-show="newQuestion.text_EN && newQuestion.text_FR && newQuestion.questiontype_ID">
                   <h2>Question: {{newQuestion.text_EN}} / {{newQuestion.text_FR}} ({{selectedAt.category_EN}})</h2>
 
                   <!-- Show category -->
@@ -415,21 +415,21 @@
           <div class="row animated" ng-class="{fadeInUp: questionLibrarySection.show}" ng-if="questionLibrarySection.show">
 
             <div class="col-xs-12" ng-init="content=1">
-              <p><label for="first"><input id="first" type="radio" name="content" ng-model="content" value="1">No library needed.</label></p>
+              <p><label for="first"><input id="first" type="radio" name="content" ng-model="content" value="1" ng-click="decreaseStep()">No library needed.</label></p>
             </div>
             <div class="col-xs-12" style="margin-bottom: 10px;">
-              <p><label for="other"><input id="other" type="radio" name="content" ng-model="content" value="2">Add the question to a library.</label></p>
+              <p><label for="other"><input id="other" type="radio" name="content" ng-model="content" value="2" ng-click="increaseStep()">Add the question to a library.</label></p>
             </div>
-            <div class="col-xs-12" ng-show="content == 2">
+            <div class="col-xs-12" ng-show="content == 2" style="padding-left:0;">
               <div class="col-xs-12" style="margin-bottom: 10px;">
                 <span style="color:#d9534f"><strong>Required field:</strong></span>
                 Please choose a question library where to add this question.
               </div>
-              <div class="col-xs-12 col-md-8">
-                <div class="panel" ng-class="newQuestion.questiongroup_serNum ? 'panel-success': 'panel-danger'">
+              <div class="col-xs-12 col-md-6">
+                <div class="panel" ng-class="newQuestion.library_ID ? 'panel-success': 'panel-danger'">
                   <div class="panel-heading"><strong>Question Libray</strong>
-                    <span ng-hide="newQuestion.questiongroup_serNum" style="float:right"><em>Incomplete</em></span>
-                    <span ng-show="newQuestion.questiongroup_serNum" style="float:right"><em>Complete</em></span>
+                    <span ng-hide="newQuestion.library_ID" style="float:right"><em>Incomplete</em></span>
+                    <span ng-show="newQuestion.library_ID" style="float:right"><em>Complete</em></span>
                   </div>
                   <div class="panel-body">
 
@@ -441,7 +441,7 @@
                       <ul class="list-items">
                         <li ng-repeat="group in groupFilterList| filter: searchLibFilter">
                           <label>
-                            <input type="radio" name="{{group.name_EN}}" value="{{group.serNum}}" ng-model="newQuestion.questiongroup_serNum" ng-change="updateGroup(group)" /> {{group.name_EN}}
+                            <input type="radio" name="{{group.name_EN}}" value="{{group.serNum}}" ng-model="newQuestion.library_ID" ng-change="updateLibrary(group)" /> {{group.name_EN}}
                           </label>
                         </li>
                       </ul>
@@ -449,27 +449,30 @@
                   </div>
                 </div>
               </div>
-
-              <!-- Add new Library/Category/Group -->
-              <div class="row animated" ng-class="{fadeInUp: questionLibrarySection.show}" ng-if="questionLibrarySection.show">
+              <div class="col-xs-12 row animated" ng-class="{fadeInUp: questionLibrarySection.show}" ng-if="questionLibrarySection.show">
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px; margin-top: 10px;">
                     <span style="font-size: 20px;" class="fa fa-question-circle"></span>
                     <span style="font-size: 15px">Can't find a question library? Create a new one here:</span>
                   </p>
                 </div>
+                <div class="panel-container">
 
-
-                <div class="col-md-4">
                   <form name="newLibForm">
-                    <div class="input-group">
-                      <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_EN" placeholder="New Library (EN)" ng-disabled="librarySelected" required/>
-                      <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_FR" placeholder="New Library (FR)" ng-disabled="librarySelected" required/>
-                      <span class="input-group-btn"><button class="btn btn-default" type="submit" ng-click="addNewLib()" ng-disabled="newLibForm.$invalid">Add</button></span>
+                    <div class="col-md-2" style="margin-top:8px; margin-bottom:5px; font-size:20px;">
+                      <label>Private:  <input type="checkbox" ng-model="newLibrary.private" ng-true-value="1" ng-false-value="0"></label>
+                    </div>
+                    <div class="col-md-8">
+                      <div class="input-group">
+                        <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_EN" placeholder="New Library (EN)" ng-disabled="librarySelected" required/>
+                        <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_FR" placeholder="New Library (FR)" ng-disabled="librarySelected" required/>
+                        <span class="input-group-btn"><button class="btn btn-default" type="submit" ng-click="addNewLib()" ng-disabled="newLibForm.$invalid">Add</button></span>
+                      </div>
                     </div>
                   </form>
                 </div>
               </div>
+              <!-- Add new Library/Category/Group -->
             </div>
           </div>
         </div>
