Added question insert code into api.

--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -392,7 +392,7 @@
                     <div class="input-group" style="margin-top:10px; margin-bottom:10px;">
                       <input class="form-control" style="width:50%" type="text" ng-model="newAnswerType.name_EN" placeholder="New Response Type (EN)" ng-disabled="!atCategory" required/>
                       <input class="form-control" style="width:50%" type="text" ng-model="newAnswerType.name_FR" placeholder="New Response Type (FR)" ng-disabled="!atCategory" required/>
-                      <span class="input-group-btn"><button class="btn btn-default" type="submit" ng-click="addNewAt(atCategory)" ng-disabled="newAtForm.$invalid">Add</button></span>
+                      <span class="input-group-btn"><button class="btn btn-default" type="submit" ng-click="addNewQuestionType(atCategory)" ng-disabled="newAtForm.$invalid">Add</button></span>
                     </div>
                   </div>
 
