--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -235,6 +235,9 @@
                     </div>
                   </div>
                 </div>
+                <div class="row col-md-12" style="margin-bottom: 20px;">
+                  <label style="font-size: 20px;">Make this question private: <input type="checkbox" ng-model="newQuestion.private" ng-true-value="1" ng-false-value="0"></label>
+                </div>
               </div>
               <div class="col-xs-12 col-md-6">
                 <div class="panel" ng-class="(newQuestion.text_FR) ? 'panel-success': 'panel-danger'">
