Started getting info for the edit questions

--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -426,7 +426,7 @@
             <div class="col-xs-12" ng-show="content == 2" style="padding-left:0;">
               <div class="col-xs-12" style="margin-bottom: 10px;">
                 <span style="color:#d9534f"><strong>Required field:</strong></span>
-                Please choose a question library where to add this question.
+                Please choose a library where to add this question.
               </div>
               <div class="col-xs-12 col-md-6">
                 <div class="panel" ng-class="newQuestion.library_ID ? 'panel-success': 'panel-danger'">
