Finished editing question for sliders

--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -376,13 +376,13 @@
                                     <div class="col-xs-12 col-md-8" ng-show="atCategory.category_EN === 'Slider'">
                                         <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
                                             <input class="form-control" style="width:20%" type="number" placeholder="Minimum value" ng-model="newAnswerType.minValue" ng-required="atCategory.category_EN === 'Slider'" />
-                                            <input class="form-control" style="width:35%" type="text" ng-model="newAnswerType.MinCaption_EN" placeholder="Minimum caption (EN)" ng-required="atCategory.category_EN === 'Slider'"/>
-                                            <input class="form-control" style="width:35%" type="text" ng-model="newAnswerType.MinCaption_FR" placeholder="Minimum caption (FR)" ng-required="atCategory.category_EN === 'Slider'" />
+                                            <input class="form-control" style="width:35%" type="text" ng-model="newAnswerType.minCaption_EN" placeholder="Minimum caption (EN)" ng-required="atCategory.category_EN === 'Slider'"/>
+                                            <input class="form-control" style="width:35%" type="text" ng-model="newAnswerType.minCaption_FR" placeholder="Minimum caption (FR)" ng-required="atCategory.category_EN === 'Slider'" />
                                         </div>
                                         <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
                                             <input class="form-control" style="width:20%" type="number" placeholder="Maximum value" ng-model="newAnswerType.maxValue" ng-required="atCategory.category_EN === 'Slider'" />
-                                            <input class="form-control" style="width:35%" type="text" ng-model="newAnswerType.MaxCaption_EN" placeholder="Maximum caption (EN)" ng-required="atCategory.category_EN === 'Slider'" />
-                                            <input class="form-control" style="width:35%" type="text" ng-model="newAnswerType.MaxCaption_FR" placeholder="Maximum caption (FR)" ng-required="atCategory.category_EN === 'Slider'" />
+                                            <input class="form-control" style="width:35%" type="text" ng-model="newAnswerType.maxCaption_EN" placeholder="Maximum caption (EN)" ng-required="atCategory.category_EN === 'Slider'" />
+                                            <input class="form-control" style="width:35%" type="text" ng-model="newAnswerType.maxCaption_FR" placeholder="Maximum caption (FR)" ng-required="atCategory.category_EN === 'Slider'" />
                                         </div>
                                         <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
                                             <input class="form-control" style="width:20%" type="number" placeholder="Increment step" ng-model="newAnswerType.increment" ng-required="atCategory.category_EN === 'Slider'"/>
